# redacted

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/auth/check-password/: route.ts
app/api/sheets/append/: route.ts
app/api/sheets/delete/: route.ts
app/api/sheets/update/: route.ts
app/journal/: page.tsx
app/profile/: page.tsx
app/salle/: page.tsx
app/settings/: page.tsx
components/: AddressAutocomplete.tsx  AppNav.tsx  AppShell.tsx  AuthGate.tsx  ChangelogModal.tsx  CountryMultiSelect.tsx  CountrySelect.tsx  FadeIn.tsx  FlatMapView.tsx  GlobeView.tsx  LanguageMultiSelect.tsx  LoadingScreen.tsx  MemberDetailPanel.tsx  MemberMap.tsx  PageGuard.tsx  PageTransition.tsx  PasswordGate.tsx  ReferentMultiSelect.tsx  ReseauMultiSelect.tsx  SetupWizard.tsx  UpdateChecker.tsx
components/salle/: NewPlanModal.tsx  SalleCanvas.tsx  SalleToolbar.tsx  SeatAssignDialog.tsx  SeatItem.tsx  UsersPanel.tsx  ZonePanel.tsx
hooks/: usePermission.ts
lib/: admin-data.ts  auth-context.tsx  beta-flags.ts  console-banner.ts  countries-data.ts  country-iso-map.ts  geocode.ts  journal-server.ts  member-locations.ts  salle-export.ts  salle-templates.ts  salle-types.ts  sheet-cache.ts  sheets-client.ts  supabase-data.ts  theme.ts  use-theme-color.ts
scripts/: generate-ico.cjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
types/: leaflet.markercluster.d.ts
