[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
dotenvy = "0.15"
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2" }
reqwest = { version = "0.12", features = ["json"] }

# Optimisations de build pour la production
[profile.release]
opt-level = "z"      # Optimise pour la taille (meilleur pour les apps desktop)
lto = "thin"         # Link Time Optimization pour réduire la taille
codegen-units = 1    # Meilleure optimisation au prix d'un build plus long
strip = true         # Supprime les symboles de debug
panic = "abort"      # Réduit la taille du binaire

[profile.release-with-debug]
inherits = "release"
debug = true         # Garde les symboles pour le debugging si nécessaire
